Swagger API is valid gainst swagger specification 2.0
